# gundam_robot

./: .gundam.rosinstall  .travis.yml  README.md
gundam_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
gundam_rx78_control/: CHANGELOG.rst  CMakeLists.txt  joint_trajectory_controller.xml  package.xml
gundam_rx78_control/config/: gundam_rx78_control.yaml
gundam_rx78_control/include/gundam_rx78_control/: joint_trajectory_controller.h  joint_trajectory_controller_impl.h
gundam_rx78_control/launch/: gundam_rx78_control.launch
gundam_rx78_control/sample/: joint_position_client_example.py  joint_trajectory_client_csv.py  joint_trajectory_client_example.py
gundam_rx78_control/sample/csv/: step.csv  turn-left.csv  turn-right.csv  walk-backward.csv  walk-forward.csv  walk-to-left.csv  walk-to-right.csv
gundam_rx78_control/src/: joint_trajectory_controller.cpp
gundam_rx78_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
gundam_rx78_description/launch/: display.launch  upload.launch
gundam_rx78_description/meshes/: rx78_object_001-lib.dae  rx78_object_002-lib.dae  rx78_object_003-lib.dae  rx78_object_004-lib.dae  rx78_object_005-lib.dae  rx78_object_006-lib.dae  rx78_object_007-lib.dae  rx78_object_008-lib.dae  rx78_object_010-lib.dae  rx78_object_011-lib.dae  rx78_object_012-lib.dae  rx78_object_013-lib.dae  rx78_object_014-lib.dae  rx78_object_015-lib.dae  rx78_object_016-lib.dae  rx78_object_017-lib.dae  rx78_object_018-lib.dae  rx78_object_019-lib.dae  rx78_object_020-lib.dae  rx78_object_021-lib.dae  rx78_object_022-lib.dae  rx78_object_023-lib.dae  rx78_object_024-lib.dae  rx78_object_025-lib.dae  rx78_object_026-lib.dae  rx78_object_027-lib.dae  rx78_object_028-lib.dae  rx78_object_029-lib.dae  rx78_object_030-lib.dae  rx78_object_031-lib.dae  rx78_object_032-lib.dae  rx78_object_033-lib.dae  rx78_object_034-lib.dae  rx78_object_039-lib.dae  rx78_object_040-lib.dae  rx78_object_041-lib.dae  rx78_object_042-lib.dae  rx78_object_043-lib.dae  rx78_object_044-lib.dae  rx78_object_045-lib.dae  (+46 more)
gundam_rx78_description/scripts/: ggc_dae_to_urdf.py  mergenode_collada.py  scale_collada.py  simplify_collada.py
gundam_rx78_description/urdf/: GGC_TestModel_rx78_20170112.urdf  LICENSE
gundam_rx78_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
gundam_rx78_gazebo/launch/: empty_world.xml  gundam_rx78_walk.launch  gundam_rx78_world.launch
gundam_rx78_gazebo/test/: check_initial_pose.py  check_walk_pose.py  start_simulator.py  test_gundam_spawn.launch  test_gundam_walk.launch
gundam_rx78_gazebo/worlds/: gundam_rx78.world
