<?xml version="1.0"?>
<package format="2">
  <name>gundam_rx78_control</name>
  <version>0.0.4</version>
  <description>gundam_rx78_control contains launch and configuration scripts for the ros controller of the GUNDAM RX-78 robot</description>

  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/gundam_rx78_control</url>

  <author email="kei.okada@gmail.com">Kei Okada</author>
  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <build_depend>roslint</build_depend>

  <!-- for joint_trajectory_controller -->
  <depend>controller_interface</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>pluginlib</depend>

  <test_depend>roslaunch</test_depend>

  <export>
    <controller_interface plugin="${prefix}/joint_trajectory_controller.xml"/>
  </export>

</package>
